# 2025_bigcontest

./: README.md  check_faiss_cnt.py  mcp_server.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: pattern_rules_declclose_v6.json
faiss_db/: index.pkl
rag/services/: ingest.py  search.py
rag/vectorstore/: chroma_client.py  embeddings.py  faiss_client.py
