[project]
name = "shcard_2025_bigcontest_chatbot"
version = "0.1.0"
description = "신한카드 가맹점 추천 챗봇"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.49.0",
    "google-generativeai>=0.8.0",
    "google-genai>=0.3.0",
    "pandas>=2.2.0",
    "mcp>=1.13.1",
    "fastmcp>=2.11.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-chroma>=0.2.6",
    "langchain-text-splitters>=0.3.10",
    "langchain-community>=0.3.31",
    "langgraph>=0.6.0",
    "faiss-cpu>=1.12.0",
    "pillow>=10.0.0",
    "youtube-transcript-api>=1.2.2",
    "pytube>=15.0.0",
]
